--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,10 +1,15 @@
 name: Docker Image CI
 
 on:
+  schedule:
+    - cron: '22 23 * * *'
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
+    # Publish semver tags as releases.
+    tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
+
 
 jobs:
 
