updated postprocessing files

--- a/run/synthTopo/preprocessing/templates/cuttingPlane.template
+++ b/run/synthTopo/preprocessing/templates/cuttingPlane.template
@@ -10,7 +10,8 @@ cuttingPlane
 {
     type            surfaces;
     functionObjectLibs ("libsampling.so");
-    writeControl   writeTime;
+    writeControl  adjustableRunTime;
+    writeInterval 0.1;
 
     surfaceFormat   vtk;
     fields          (p U rho alpha.particles);
